# jiruff

./: .gitignore  README.md  pyproject.toml
src/giruff/: __init__.py
src/giruff/base/: commands.py  services.py
src/giruff/commands/: check.py  format.py
src/giruff/config/: __init__.py
src/giruff/rules/format/: art_001_versions_propagation.py
src/giruff/services/: gitlab.py  jira.py
src/jiruff/: __init__.py
src/jiruff/base/: commands.py  services.py
src/jiruff/base/services/: cloud_jira.py
src/jiruff/commands/: check.py  format.py  freeze.py  report.py  sync.py
src/jiruff/config/: __init__.py
src/jiruff/local/: __init__.py  paths.py
src/jiruff/rules/format/: art_001_versions_propagation.py  issues_001_versions_propagation.py  issues_002_child_parent_alignment_version.py  issues_007_auto_watch.py
src/jiruff/rules/report/: process_001_forgot_time_tracking.py
src/jiruff/services/: cloud_jira.py  jira.py  local_jira.py
