[project]
name = "jiruff"
version = "0.1.0"
description = "Linter for your Jira and GitLab"
authors = [
    {name = "hxmn", email = "me@hxmv.dev"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jira>=3.10",
    "keyring>=25.6.0",
    "orjson>=3.11",
    "pandas>=2.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-gitlab>=6.2",
]

[project.scripts]
jiruff = "jiruff:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
